@@ -3,6 +3,8 @@ Changes made from the "0.7.0" release to the "0.8.0" release:
 
 * Bertrand Coconnier:
 
+- Optimized calls to glNormal3f(). It is now called once per string rather than
+  once per character (except for extrusion).
 - Refactored code of object __GLCmaster.
 - Maximum character metrics obtained from glcGetMaxCharMetric() are now cached.
 - Code refactoring between glcGetMaxCharMetric() and the other measurement
